--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <body>
     {{> header }}
     <h1>Hello World Test!</h1>
+    <p>hallo lalala</p>
+    <p>haaaa</p>
     <main>
       <a href="/sub-page/">Link to Subpage</a>
       <div>Home</div>
