start mainpage- got components

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,15 @@
     />
   </head>
   <body>
+    <div>
     {{> header }}
-
-
-      
-    <p>hallo lalala</p>
-    <p>haaaa</p>
+  </div>
+  
+  <div>
+    {{> main }}
+  </div>
     <main>
+      
       <a href="/sub-page/">Link to Subpage</a>
       <div>Home</div>
     </main>
