--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,53 @@
     />
   </head>
   <body>
-    <div>
       {{> header }}
-    </div>
+   
 
-   <main>
-      <div>
-        {{> main }}
-      </div> 
+   
+    <main class="main">
+      <div class="content-box">
+          <div class="text-box__left">
+             <div>
+                  <h2>Rösterei & Café</h2>
+              <br>
+              <br>
+                  <p>Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
+                      Rösterei, serviert im gemütlichen Café in der innenstadt.
+                  </p>
+              </div>
+            
+              <div class="info-box__left">
+                   <a> Komm vorbei! <br> Fraunhoferstr. 13, Kiel </a>
+              </div>
+  
+              <div class="info-box__right">
+                   <a> Mo - Fr 8-18 Uhr <br> Sa 11-18 Uhr</a>
+              </div>
+  
+         </div>
+  
+          <div class="image-box__right">
+              <img src="images/Coffee-shop.jpg" alt="Café" class="image__right" >
+          </div>
+  
+      </div>
+  
+      <div class=content-box>
+  
+          <div class="image-box__left">
+              <img src="images/coffee-plant.jpg" alt="Café" class="image__left" >
+          </div>
+      
+          <div class="text-box__right">
+              <h2>Bio und Fair</h2>
+              <br>
+                   <a>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konstantien leben die Blindtexte. Und das alles in der besten Bio Qualität </a>
+              <a href="mehr"></a>
+          </div>
+      </div>
   </main>
+ 
 
     <script src="/js/index.js" type="module"></script>
   </body>
