--- a/src/index.html
+++ b/src/index.html
@@ -152,9 +152,8 @@
           <div class="Titel">
             <h2>Komm vorbei</h2>
           </div>
-          <map name="Fraunhoferstraße 13"></map>
           <iframe 
-          src="https://www.google.com/maps/embed/v1/place?q=Fraunhoferstraße13&key=AIzaSyAYC5ouzJ-qHlrMXa4qhnu3d9jSx1R62jk" 
+          src="https://www.openstreetmap.org/export/embed.html?bbox=12, 12, 12, 12" 
           frameborder="0"
           style="border: 0;"
           width="100%"
