--- a/src/index.html
+++ b/src/index.html
@@ -256,5 +256,8 @@
       </div>
     </main>
     {{>Footer}}
+    <script type="module" src="../js/changeNavColor.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
