Navigation Mobil und Desktop ready also changeColor

--- a/src/index.html
+++ b/src/index.html
@@ -256,8 +256,9 @@
       </div>
     </main>
     {{>Footer}}
-    <script type="module" src="../js/changeNavColor.js"></script>
-    <script src="../js/script.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/index.js"></script>
+    <script type="module" src="./js/changeNavColor.js"></script>
+    <script type="module" src="./js/changeNavColorMobil"></script>
   </body>
 </html>
