sub page DasCafé inkls. Menü is working

--- a/src/index.html
+++ b/src/index.html
@@ -256,9 +256,10 @@
       </div>
     </main>
     {{>Footer}}
+
     <script src="./js/script.js"></script>
     <script src="./js/index.js"></script>
     <script type="module" src="./js/changeNavColor.js"></script>
-    <script type="module" src="./js/changeNavColorMobil"></script>
+    <script type="module" src="./js/changeNavColorMobil.js"></script>
   </body>
 </html>
