--- a/src/sub-page/DasCafé.html
+++ b/src/sub-page/DasCafé.html
@@ -60,6 +60,7 @@
           </a>
         </div>
       </div>
+
       <div class="Flexbox_Imagebox">
         <div class="Imagebox_Collage">
           <div class="Item_Collage">
@@ -108,6 +109,64 @@
               class="Img_Collage"
               src="/images/coffee-breakfast 1.jpg"
               alt="Coffee breakfast"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="Flexbox_Imagebox-mobile">
+        <div class="Imagebox_Collage">
+          <div class="Item_Collage">
+            <img
+              class="Img_Collage"
+              src="/images/danish 1.jpg"
+              alt="Croissants"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/coffee-machine.jpg"
+              alt="Coffee machine"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/Coffee-latte-art.jpg"
+              alt="Coffee latte art"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/Coffee-sign.jpg"
+              alt="Coffee sign"
+            />
+          </div>
+        </div>
+
+        <div class="Imagebox_Collage">
+          <div class="Item_Collage">
+            <img
+              class="Img_Collage"
+              src="/images/Coffee-latte-art-2.jpg"
+              alt="Coffee latte art"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/coffee-breakfast 1.jpg"
+              alt="Coffee breakfast"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/coffee-list.jpg"
+              alt="Coffee list"
+            />
+
+            <img
+              class="Img_Collage"
+              src="/images/Coffee-latte-art-3.jpg"
+              alt="Coffee latte art"
             />
           </div>
         </div>
