Verlinkung und unterstreichen der aktiven Seite

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Oregano"
       rel="stylesheet"
     />
+    <script src="./js/currentPage.js"></script>
   </head>
   <body>
     {{> header }}
@@ -174,7 +175,7 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn-white">Alle Produkte</a>
+        <a href="./sub-page/Shop.html" class="btn-white">Alle Produkte</a>
       </div>
 
       <div class="Flexbox_Coffee-bags">
@@ -237,7 +238,7 @@
             </p>
           </div>
 
-          <a href="#" class="btn_zum-Shop">zum Shop</a>
+          <a href="./sub-page/Shop.html" class="btn_zum-Shop">zum Shop</a>
         </div>
       </div>
 
@@ -257,9 +258,10 @@
     </main>
     {{>Footer}}
 
-    <script src="./js/script.js"></script>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/index.js"></script>
     <script type="module" src="./js/changeNavColor.js"></script>
     <script type="module" src="./js/changeNavColorMobil.js"></script>
+    <script type="module" src="./js/currentPage.js"></script>
   </body>
 </html>
