--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -10,6 +10,8 @@
     {{> header-sub-page-DasCafé }}
 
     <main>
+<div class="test">TEST</div>
+
       <div class="Flexbox_Content">
         <div class="Textbox_left">
           <div>
@@ -186,9 +188,10 @@
       </div>
     </main>
     {{>Footer-sub-page}}
-    <script src="../js/script.js"></script>
-    <script src="../js/index.js"></script>
+    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="../js/index.js"></script>
     <script type="module" src="../js/changeNavColor.js"></script>
     <script type="module" src="../js/changeNavColorMobil.js"></script>
+    <script type="module" src="../js/currentPage.js"></script>
   </body>
 </html>
