--- a/src/sub-page/DieHerkunft.html
+++ b/src/sub-page/DieHerkunft.html
@@ -98,9 +98,10 @@
     
     </main>
     {{>Footer-sub-page}}
-    <script src="../js/script.js"></script>
-    <script src="../js/index.js"></script>
+    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="../js/index.js"></script>
     <script type="module" src="../js/changeNavColor.js"></script>
     <script type="module" src="../js/changeNavColorMobil.js"></script>
+    <script type="module" src="../js/currentPage.js"></script>
   </body>
 </html>
