Links sind ready!

--- a/src/index.html
+++ b/src/index.html
@@ -258,10 +258,11 @@
     </main>
     {{>Footer}}
 
-    <script type="module" src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script type="module" src="./js/index.js"></script>
     <script type="module" src="./js/changeNavColor.js"></script>
     <script type="module" src="./js/changeNavColorMobil.js"></script>
     <script type="module" src="./js/currentPage.js"></script>
+    <script type="module" src="./js/AllScripts.js"></script>
   </body>
 </html>
