--- a/src/sub-page/DieHerkunft.html
+++ b/src/sub-page/DieHerkunft.html
@@ -98,7 +98,7 @@
     
     </main>
     {{>Footer-sub-page}}
-    <script type="module" src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script type="module" src="../js/index.js"></script>
     <script type="module" src="../js/changeNavColor.js"></script>
     <script type="module" src="../js/changeNavColorMobil.js"></script>
