--- a/src/sub-page/Impressum.html
+++ b/src/sub-page/Impressum.html
@@ -16,7 +16,7 @@
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
-            <a href="DasCafé.html" class="Link_top-nav-black">
+            <a href="DasCafe.html" class="Link_top-nav-black">
               <span>das Café</span>
             </a>
           </li>
@@ -89,7 +89,7 @@
 
 
       <div class="Content_Impressum">
-        <h3>Privacy Policy & <br> <br>scope</h3>
+        <h3 id="Datenschutz">Privacy Policy & <br> <br>scope</h3>
         <p>
           The privacy policy describes exclusively how Opencampus.sh uses your personal data for services with
           functions available on Opencampus.sh. It applies exclusively to the Opencampus.sh website. Furthermore,
@@ -188,7 +188,7 @@
 
   </main>
   {{>Footer-sub-page}}
-  <script type="module" src="../js/script.js"></script>
+  <script src="../js/script.js"></script>
   <script type="module" src="../js/index.js"></script>
   <script type="module" src="../js/currentPage.js"></script>
 </body>
