--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -10,7 +10,7 @@
     {{> header-sub-page-DasCafé }}
 
     <main>
-<div class="test">TEST</div>
+
 
       <div class="Flexbox_Content">
         <div class="Textbox_left">
@@ -188,7 +188,7 @@
       </div>
     </main>
     {{>Footer-sub-page}}
-    <script type="module" src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script type="module" src="../js/index.js"></script>
     <script type="module" src="../js/changeNavColor.js"></script>
     <script type="module" src="../js/changeNavColorMobil.js"></script>
