--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -1,197 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subpage</title>
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
-  <body>
-    {{> header-sub-page-DasCafé }}
 
-    <main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Subpage</title>
+  <link rel="stylesheet" href="/css/main.css" />
+</head>
 
+<body>
+  <div class="Menu_Desktop">
+    <div class="Box_top-nav">
+      <nav class="Bar_top-nav">
+        <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
 
-      <div class="Flexbox_Content">
-        <div class="Textbox_left">
-          <div>
-            <h2 class="Titel_Rösterei-Café">Rösterei & Café</h2>
-            <p>
-              Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
-              Rösterei, serviert im gemütlichen Café in der innenstadt.
-            </p>
-          </div>
-
-          <div class="Infobox_left">
-            <a>
-              Komm vorbei! <br />
-              Fraunhoferstr. 13, Kiel
+        <ul class="List_top-nav">
+          <li class="Item_top-nav">
+            <a href="DasCafe.html" class="Link_top-nav-black">
+              <span>das Café</span>
             </a>
-          </div>
+          </li>
+          <li class="Item_top-nav">
+            <a href="DieHerkunft.html" class="Link_top-nav-black">
+              <span>Herkunft</span>
+            </a>
+          </li>
+          <li class="Item_top-nav">
+            <a href="Shop.html" class="Link_top-nav-black">
+              <span>Shop</span>
+            </a>
+          <li class="Item_top-nav">
+            <a href="Shop.html" class="Link_top-nav-black">
+              <img src="../images/Shop Icon Black.svg" alt="Cart" class="top-nav__icon" />
+            </a>
+          </li>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <div class="Menu_mobile-test">
+    <nav class="Menu_mobile">
 
-          <div class="Infobox_right">
-            <a>
-              Mo - Fr 8-18 Uhr <br />
-              Sa 11-18 Uhr</a
-            >
-          </div>
-        </div>
-
-        <div class="Imagebox_right">
-          <img src="/images/FEND-Coffee-machine-2.jpg" alt="Café" />
-        </div>
+      <div class="Logo_top-nav_mobile">
+        <img src="../images/Logo Black.svg" alt="Logo" id="logoImg" />
       </div>
 
-      <div class="Flexbox_Content-Center">
-        <div class="Textbox_center">
-          <h2 class="Titel_Bio-und-Fair">
-            Frisches Gebäck <br />
-            von nebenan
-          </h2>
-          <br />
-          <a
-            >Als es die ersten Hügel des Kursivgebirges erklommen hatte, warf es
-            einen letzten Blick zurück auf die Skyline seiner Heimatstadt
-            Buchstabhausen, die Headline von Alphabetdorf. Wehmütig lief ihm
-            eine rhetorische Frage über die Wange, dann setzte es seinen Weg
-            fort. Unterwegs traf es eine Copy. Die Copy warnte das
-            Blindtextchen, da, wo sie herkäme wäre sie zigmal umgeschrieben
-            worden und alles, was von ihrem Ursprung noch übrig wäre, sei das
-            Wort "und" und das Blindtextchen solle umkehren und wieder in sein
-            eigenes, sicheres Land zurückkehren.
-          </a>
-        </div>
+      <div class="Menu_toggle" onclick="toggleMenu()">
+        <img src="../images/Burger Menu Black.svg" alt="Menu" id="burgerImg" />
       </div>
 
-      <div class="Flexbox_Imagebox">
-        <div class="Imagebox_Collage">
-          <div class="Item_Collage">
+      <div class="Menupunkte_mobile">
+        <ul class="List_top-nav-mobile">
+          <li class="Item_top-nav-mobile">
+            <a href="DasCafé.html" class="Link_top-nav-mobile">
+              <span>das Café</span>
+            </a>
+          </li>
+          <li class="Item_top-nav-mobile">
+            <a href="DieHerkunft.html" class="Link_top-nav-mobile">
+              <span>Herkunft</span>
+            </a>
+          </li>
+          <li class="Item_top-nav-mobile">
+            <a href="Shop.html" class="Link_top-nav-mobile">
+              <span>Shop</span>
+            </a>
+          </li>
+        </ul>
+
+        <div class="Menu_close" onclick="toggleMenu()">
+          <img src="../images/Burger Menu close.svg" alt="Close" />
+
+        </div>
+      </div>
+    </nav>
+  </div>
+
+
+  <main>
+    <div class="Flexbox_Shop">
+        <h2 class="Titel_Entdecke-Shop">Entdecke unser <br>Kaffee Sorten</h2>
+        <div class="Flexbox_Costa-Rica-Shop">
+          <div class="Flexbox_Single-Costa-Rica">
             <img
-              class="Img_Collage"
-              src="/images/danish 1.jpg"
-              alt="Croissants"
+              src="../images/Coffee-Costa_Rica.jpg"
+              alt="Coffee-Costa_Rica"
+              class="Image_Costa-Rica-Shop"
             />
-            <img
-              class="Img_Collage"
-              src="/images/Coffee-sign.jpg"
-              alt="Coffee sign"
-            />
+            <p class="Text_Costa-Rica">Costa Rica</p>
+            <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+            <div class="Costa_Rica__Icon-line">
+              <img
+                src="../images/Icon Kaffee Bohnen Black.svg"
+                alt="Kaffeebohnen"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon French Press Black.svg"
+                alt="French Press"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon Kaffee Schaufel Black.svg"
+                alt="Kaffee Schaufel"
+                class="Icons_Icon-line-shop"
+              />
+            </div>
           </div>
-          <div class="Item_Collage">
+
+          <div class="Flexbox_Single-Costa-Rica">
             <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art-2.jpg"
-              alt="Coffee latte art"
+              src="../images/Coffee-Costa_Rica.jpg"
+              alt="Coffee-Costa_Rica"
+              class="Image_Costa-Rica-Shop"
             />
-            <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art-3.jpg"
-              alt="Coffee latte art"
-            />
+            <p class="Text_Costa-Rica">Äthiopien</p>
+            <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+            <div class="Costa_Rica__Icon-line">
+              <img
+                src="../images/Icon Kaffee Bohnen Black.svg"
+                alt="Kaffeebohnen"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon French Press Black.svg"
+                alt="French Press"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon Kaffee Schaufel Black.svg"
+                alt="Kaffee Schaufel"
+                class="Icons_Icon-line-shop"
+              />
+            </div>
           </div>
-          <div class="Item_Collage">
+
+          <div class="Flexbox_Single-Costa-Rica">
             <img
-              class="Img_Collage"
-              src="/images/coffee-machine.jpg"
-              alt="Coffee machine"
+              src="../images/Coffee-Costa_Rica.jpg"
+              alt="Coffee-Costa_Rica"
+              class="Image_Costa-Rica-Shop"
             />
-            <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art.jpg"
-              alt="Coffee latte art"
-            />
+            <p class="Text_Costa-Rica">Costa Rica</p>
+            <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+            <div class="Costa_Rica__Icon-line">
+              <img
+                src="../images/Icon Kaffee Bohnen Black.svg"
+                alt="Kaffeebohnen"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon French Press Black.svg"
+                alt="French Press"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon Kaffee Schaufel Black.svg"
+                alt="Kaffee Schaufel"
+                class="Icons_Icon-line-shop"
+              />
+            </div>
           </div>
-          <div class="Item_Collage">
+
+          <div class="Flexbox_Single-Costa-Rica">
             <img
-              class="Img_Collage"
-              src="/images/coffee-list.jpg"
-              alt="Coffee list"
+              src="../images/Coffee-Costa_Rica.jpg"
+              alt="Coffee-Costa_Rica"
+              class="Image_Costa-Rica-Shop"
+            />
+            <p class="Text_Costa-Rica">Äthiopien</p>
+            <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+            <div class="Costa_Rica__Icon-line">
+              <img
+                src="../images/Icon Kaffee Bohnen Black.svg"
+                alt="Kaffeebohnen"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon French Press Black.svg"
+                alt="French Press"
+                class="Icons_Icon-line-shop"
+              />
+              <img
+                src="../images/Icon Kaffee Schaufel Black.svg"
+                alt="Kaffee Schaufel"
+                class="Icons_Icon-line-shop"
+              />
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="Flexbox_Shop">
+      
+      <div class="Flexbox_Costa-Rica-Shop">
+        <div class="Flexbox_Single-Costa-Rica">
+          <img
+            src="../images/Coffee-Costa_Rica.jpg"
+            alt="Coffee-Costa_Rica"
+            class="Image_Costa-Rica-Shop"
+          />
+          <p class="Text_Costa-Rica">Costa Rica</p>
+          <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+          <div class="Costa_Rica__Icon-line">
+            <img
+              src="../images/Icon Kaffee Bohnen Black.svg"
+              alt="Kaffeebohnen"
+              class="Icons_Icon-line-shop"
             />
             <img
-              class="Img_Collage"
-              src="/images/coffee-breakfast 1.jpg"
-              alt="Coffee breakfast"
+              src="../images/Icon French Press Black.svg"
+              alt="French Press"
+              class="Icons_Icon-line-shop"
+            />
+            <img
+              src="../images/Icon Kaffee Schaufel Black.svg"
+              alt="Kaffee Schaufel"
+              class="Icons_Icon-line-shop"
             />
           </div>
         </div>
-      </div>
 
-      <div class="Flexbox_Imagebox-mobile">
-        <div class="Imagebox_Collage">
-          <div class="Item_Collage">
+        <div class="Flexbox_Single-Costa-Rica">
+          <img
+            src="../images/Coffee-Costa_Rica.jpg"
+            alt="Coffee-Costa_Rica"
+            class="Image_Costa-Rica-Shop"
+          />
+          <p class="Text_Costa-Rica">Äthiopien</p>
+          <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+          <div class="Costa_Rica__Icon-line">
             <img
-              class="Img_Collage"
-              src="/images/danish 1.jpg"
-              alt="Croissants"
+              src="../images/Icon Kaffee Bohnen Black.svg"
+              alt="Kaffeebohnen"
+              class="Icons_Icon-line-shop"
             />
-
             <img
-              class="Img_Collage"
-              src="/images/coffee-machine.jpg"
-              alt="Coffee machine"
+              src="../images/Icon French Press Black.svg"
+              alt="French Press"
+              class="Icons_Icon-line-shop"
             />
-
             <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art.jpg"
-              alt="Coffee latte art"
-            />
-
-            <img
-              class="Img_Collage"
-              src="/images/Coffee-sign.jpg"
-              alt="Coffee sign"
+              src="../images/Icon Kaffee Schaufel Black.svg"
+              alt="Kaffee Schaufel"
+              class="Icons_Icon-line-shop"
             />
           </div>
         </div>
 
-        <div class="Imagebox_Collage">
-          <div class="Item_Collage">
+        <div class="Flexbox_Single-Costa-Rica">
+          <img
+            src="../images/Coffee-Costa_Rica.jpg"
+            alt="Coffee-Costa_Rica"
+            class="Image_Costa-Rica-Shop"
+          />
+          <p class="Text_Costa-Rica">Costa Rica</p>
+          <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+          <div class="Costa_Rica__Icon-line">
             <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art-2.jpg"
-              alt="Coffee latte art"
+              src="../images/Icon Kaffee Bohnen Black.svg"
+              alt="Kaffeebohnen"
+              class="Icons_Icon-line-shop"
             />
-
             <img
-              class="Img_Collage"
-              src="/images/coffee-breakfast 1.jpg"
-              alt="Coffee breakfast"
+              src="../images/Icon French Press Black.svg"
+              alt="French Press"
+              class="Icons_Icon-line-shop"
             />
-
             <img
-              class="Img_Collage"
-              src="/images/coffee-list.jpg"
-              alt="Coffee list"
-            />
-
-            <img
-              class="Img_Collage"
-              src="/images/Coffee-latte-art-3.jpg"
-              alt="Coffee latte art"
+              src="../images/Icon Kaffee Schaufel Black.svg"
+              alt="Kaffee Schaufel"
+              class="Icons_Icon-line-shop"
             />
           </div>
         </div>
-      </div>
-      <div class="Box_Map">
-        <h2 class="Titel_Map">Komm vorbei</h2>
 
-        <iframe
-          src="https://www.openstreetmap.org/export/embed.html?bbox=12, 12, 12, 12"
-          frameborder="0"
-          style="border: 0"
-          width="100%"
-          height="100%"
-          allowfullscreen
-        >
-        </iframe>
-      </div>
-    </main>
-    {{>Footer-sub-page}}
-    <script src="../js/script.js"></script>
-    <script type="module" src="../js/index.js"></script>
-    <script type="module" src="../js/changeNavColor.js"></script>
-    <script type="module" src="../js/changeNavColorMobil.js"></script>
-    <script type="module" src="../js/currentPage.js"></script>
-  </body>
+        <div class="Flexbox_Single-Costa-Rica">
+          <img
+            src="../images/Coffee-Costa_Rica.jpg"
+            alt="Coffee-Costa_Rica"
+            class="Image_Costa-Rica-Shop"
+          />
+          <p class="Text_Costa-Rica">Äthiopien</p>
+          <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+          <div class="Costa_Rica__Icon-line">
+            <img
+              src="../images/Icon Kaffee Bohnen Black.svg"
+              alt="Kaffeebohnen"
+              class="Icons_Icon-line-shop"
+            />
+            <img
+              src="../images/Icon French Press Black.svg"
+              alt="French Press"
+              class="Icons_Icon-line-shop"
+            />
+            <img
+              src="../images/Icon Kaffee Schaufel Black.svg"
+              alt="Kaffee Schaufel"
+              class="Icons_Icon-line-shop"
+            />
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="Box_Map">
+    <h2 class="Titel_Map">Komm vorbei</h2>
+
+    <iframe
+      src="https://www.openstreetmap.org/export/embed.html?bbox=12, 12, 12, 12"
+      frameborder="0"
+      style="border: 0"
+      width="100%"
+      height="100%"
+      allowfullscreen
+    >
+    </iframe>
+  </div>
+  </main>
+  {{>Footer-sub-page}}
+  <script src="../js/script.js"></script>
+  <script type="module" src="../js/index.js"></script>
+  <script type="module" src="../js/currentPage.js"></script>
+</body>
+
 </html>
