Produkt-Page Desktop und mobil ready

--- a/src/sub-page/Produkt.html
+++ b/src/sub-page/Produkt.html
@@ -197,6 +197,7 @@
   </main>
   {{>Footer-sub-page}}
   <script src="../js/script.js"></script>
+ <script src="../js/Dropdown.js"></script> 
   <script type="module" src="../js/index.js"></script>
   <script type="module" src="../js/currentPage.js"></script>
 </body>
