--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -53,7 +53,7 @@
       <div class="Menupunkte_mobile">
         <ul class="List_top-nav-mobile">
           <li class="Item_top-nav-mobile">
-            <a href="DasCafé.html" class="Link_top-nav-mobile">
+            <a href="DasCafe.html" class="Link_top-nav-mobile">
               <span>das Café</span>
             </a>
           </li>
