Map adress ready

--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -12,7 +12,9 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
+        <a href="../index.html">
+          <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
+        </a>
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
@@ -342,7 +344,7 @@
     <h2 class="Titel_Map">Komm vorbei</h2>
 
     <iframe
-      src="https://www.openstreetmap.org/export/embed.html?bbox=12, 12, 12, 12"
+    src="https://www.openstreetmap.org/export/embed.html?bbox=10.122213888337855,54.34175251840244,10.122213888337855,54.34175251840244"
       frameborder="0"
       style="border: 0"
       width="100%"
