--- a/src/sub-page/Impressum.html
+++ b/src/sub-page/Impressum.html
@@ -12,8 +12,9 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
+        <a href="../index.html">
         <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
-
+      </a>
         <ul class="List_top-nav">
           <li class="Item_top-nav">
             <a href="DasCafe.html" class="Link_top-nav-black">
