--- a/src/sub-page/Produkt.html
+++ b/src/sub-page/Produkt.html
@@ -12,7 +12,9 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
+        <a href="../index.html">
+          <img src="../images/Logo Black.svg" alt="Logo" class="Logo_top-nav" />
+        </a>
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
