--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
             </div>
           </div>
         </div>
-        <a href="./sub-page/Shop.html" class="btn-white">Alle Produkte</a>
+        <a href="./sub-page/Shop.html" class="btn btn-animated btn-white">Alle Produkte</a>
       </div>
 
       <div class="Flexbox_Coffee-bags">
@@ -238,7 +238,7 @@
             </p>
           </div>
 
-          <a href="./sub-page/Shop.html" class="btn_zum-Shop">zum Shop</a>
+          <a href="./sub-page/Shop.html" class="btn btn-animated btn_zum-Shop">zum Shop</a>
         </div>
       </div>
 
