--- a/src/sub-page/Produkt.html
+++ b/src/sub-page/Produkt.html
@@ -140,7 +140,7 @@
          
       </div>
       
-      <button class="cart-button" onclick="window.location.href='./Cart.html '">Warenkorb</button>
+      <button class="btn btn-animated cart-button" onclick="window.location.href='./Cart.html '">Warenkorb</button>
 
         <div class="Costa_Rica__Icon-line-Produkt">
           <div class="Single-Icon-line-Produkt">
@@ -227,7 +227,7 @@
           </div>
         </div>
       </div>
-      <a href="./sub-page/Shop.html" class="btn-white">Alle Produkte</a>
+      <a href="./sub-page/Shop.html" class="btn btn-animated btn-white">Alle Produkte</a>
     </div>
 
 
