Fehlermeldungen für Pfade überarbeitet, Scripte und Video laufen korrekt

--- a/src/index.html
+++ b/src/index.html
@@ -258,11 +258,10 @@
     </main>
     {{>Footer}}
 
-    <script src="./js/script.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script src="../js/toggleMenu.js"></script>
     <script type="module" src="./js/changeNavColor.js"></script>
     <script type="module" src="./js/changeNavColorMobil.js"></script>
     <script type="module" src="./js/currentPage.js"></script>
-    <script type="module" src="./js/AllScripts.js"></script>
+    <script src="../js/cart.js"></script>
   </body>
 </html>
