--- a/src/sub-page/DasCafe.html
+++ b/src/sub-page/DasCafe.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="Imagebox_right">
-          <img src="/images/FEND-Coffee-machine-2.jpg" alt="Café" />
+          <img src="../images/FEND-Coffee-machine-2.jpg" alt="Café" />
         </div>
       </div>
 
@@ -66,48 +66,48 @@
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/danish 1.jpg"
+              src="../images/danish 1.jpg"
               alt="Croissants"
             />
             <img
               class="Img_Collage"
-              src="/images/Coffee-sign.jpg"
+              src="../images/Coffee-sign.jpg"
               alt="Coffee sign"
             />
           </div>
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art-2.jpg"
+              src="../images/Coffee-latte-art-2.jpg"
               alt="Coffee latte art"
             />
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art-3.jpg"
+              src="../images/Coffee-latte-art-3.jpg"
               alt="Coffee latte art"
             />
           </div>
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/coffee-machine.jpg"
+              src="../images/coffee-machine.jpg"
               alt="Coffee machine"
             />
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art.jpg"
+              src="../images/Coffee-latte-art.jpg"
               alt="Coffee latte art"
             />
           </div>
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/coffee-list.jpg"
+              src="../images/coffee-list.jpg"
               alt="Coffee list"
             />
             <img
               class="Img_Collage"
-              src="/images/coffee-breakfast 1.jpg"
+              src="../images/coffee-breakfast 1.jpg"
               alt="Coffee breakfast"
             />
           </div>
@@ -119,25 +119,25 @@
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/danish 1.jpg"
+              src="../images/danish 1.jpg"
               alt="Croissants"
             />
 
             <img
               class="Img_Collage"
-              src="/images/coffee-machine.jpg"
+              src="../images/coffee-machine.jpg"
               alt="Coffee machine"
             />
 
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art.jpg"
+              src="../images/Coffee-latte-art.jpg"
               alt="Coffee latte art"
             />
 
             <img
               class="Img_Collage"
-              src="/images/Coffee-sign.jpg"
+              src="../images/Coffee-sign.jpg"
               alt="Coffee sign"
             />
           </div>
@@ -147,25 +147,25 @@
           <div class="Item_Collage">
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art-2.jpg"
+              src="../images/Coffee-latte-art-2.jpg"
               alt="Coffee latte art"
             />
 
             <img
               class="Img_Collage"
-              src="/images/coffee-breakfast 1.jpg"
+              src="../images/coffee-breakfast 1.jpg"
               alt="Coffee breakfast"
             />
 
             <img
               class="Img_Collage"
-              src="/images/coffee-list.jpg"
+              src="../images/coffee-list.jpg"
               alt="Coffee list"
             />
 
             <img
               class="Img_Collage"
-              src="/images/Coffee-latte-art-3.jpg"
+              src="../images/Coffee-latte-art-3.jpg"
               alt="Coffee latte art"
             />
           </div>
@@ -186,10 +186,10 @@
       </div>
     </main>
     {{>Footer-sub-page}}
-    <script src="../js/script.js"></script>
-    <script type="module" src="../js/index.js"></script>
+    <script src="../js/toggleMenu.js"></script>
     <script type="module" src="../js/changeNavColor.js"></script>
     <script type="module" src="../js/changeNavColorMobil.js"></script>
     <script type="module" src="../js/currentPage.js"></script>
+    <script src="../js/cart.js"></script>
   </body>
 </html>
