--- a/src/sub-page/Produkt.html
+++ b/src/sub-page/Produkt.html
@@ -233,10 +233,10 @@
 
   </main>
   {{>Footer-sub-page}}
-  <script src="../js/script.js"></script>
+  <script src="../js/toggleMenu.js"></script>
  <script src="../js/Dropdown.js"></script> 
-  <script type="module" src="../js/index.js"></script>
   <script type="module" src="../js/currentPage.js"></script>
+  <script src="../js/cart.js"></script>
 </body>
 
 </html>
