--- a/src/sub-page/Impressum.html
+++ b/src/sub-page/Impressum.html
@@ -225,9 +225,9 @@
 
   </main>
   {{>Footer-sub-page}}
-  <script src="../js/script.js"></script>
-  <script type="module" src="../js/index.js"></script>
+  <script src="../js/toggleMenu.js"></script>
   <script type="module" src="../js/currentPage.js"></script>
+  <script src="../js/cart.js"></script>
 </body>
 
 </html>
