--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -355,9 +355,9 @@
   </div>
   </main>
   {{>Footer-sub-page}}
-  <script src="../js/script.js"></script>
-  <script type="module" src="../js/index.js"></script>
+  <script src="../js/toggleMenu.js"></script>
   <script type="module" src="../js/currentPage.js"></script>
+  <script src="../js/cart.js"></script>
 </body>
 
 </html>
