--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Page</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Oregano"
       rel="stylesheet"
@@ -13,7 +13,7 @@
   </head>
   <body>
     {{> header }}
-    
+
     <main>
       <div class="Flexbox_Content">
         <div class="Textbox_left">
@@ -175,7 +175,9 @@
             </div>
           </div>
         </div>
-        <a href="./sub-page/Shop.html" class="btn btn-animated btn-white">Alle Produkte</a>
+        <a href="./sub-page/Shop.html" class="btn btn-animated btn-white"
+          >alle Produkte</a
+        >
       </div>
 
       <div class="Flexbox_Coffee-bags">
@@ -238,7 +240,9 @@
             </p>
           </div>
 
-          <a href="./sub-page/Shop.html" class="btn btn-animated btn_zum-Shop">zum Shop</a>
+          <a href="./sub-page/Shop.html" class="btn btn-animated btn_zum-Shop"
+            >zum Shop</a
+          >
         </div>
       </div>
 
