CurrentPage black underline + Starting add to cart

--- a/src/sub-page/Impressum.html
+++ b/src/sub-page/Impressum.html
@@ -84,6 +84,10 @@
 
   <div id="overlay" class="overlay">
     <div class="cart-content">
+      <span class="close-button"><img
+        src="../images/Burger Menu close Black.svg"
+        alt="Close"
+      /></span>
       <h3 class="Titel_Warenkorb">Warenkorb</h3>
       <div class="cart-summary">
         <p><span id="total-items">0</span> Produkte</p>
