Cart in progress

--- a/src/sub-page/Shop.html
+++ b/src/sub-page/Shop.html
@@ -91,8 +91,7 @@
       <h3 class="Titel_Warenkorb">Warenkorb</h3>
       <div class="cart-summary">
         <p><span id="total-items">0</span> Produkte</p>
-        <div class="success-box">Produkt(e) wurde(n) erfolgreich zum Warenkorb
-          hinzugefügt.</div>
+        <div class="success-box">1 Produkt wurde erfolgreich zum Warenkorb hinzugefügt</div>
       </div>
       <div id="cart" class="products-list">
         <!-- Produkte werden hier eingefügt -->
@@ -131,6 +130,7 @@
             />
             <p class="Text_Costa-Rica">Costa Rica</p>
             <p class="Price_Costa-Rica">6,90€ - 26,90€</p>
+            
             <div class="Costa_Rica__Icon-line">
               <img
                 src="../images/Icon Kaffee Bohnen Black.svg"
@@ -147,7 +147,7 @@
                 alt="Kaffee Schaufel"
                 class="Icons_Icon-line-shop"
               />
-              <button onclick="addToCart('Costa Rica', '6,90€ - 26,90€')">In den Warenkorb</button>
+              <button onclick="addToCart('Costa Rica', '6,90€', '../images/Coffee-Costa_Rica.jpg')" class="btn-add-to-cart">quick add+</button>
             </div>
           </div>
 
